@@ -13,6 +13,6 @@ public class LocalDateBinder implements TypeBinder<LocalDate> {
 
     @Override
     public LocalDate bind(String name, Annotation[] annotations, String value, Class actualClass, Type genericType) {
-        return value != null && !value.trim().isEmpty() ? LocalDate.parse(value) : null;
+        return value != null && !value.isBlank() ? LocalDate.parse(value) : null;
     }
 }
