@@ -13,6 +13,6 @@ public class LocalTimeBinder implements TypeBinder<LocalTime> {
 
     @Override
     public LocalTime bind(String name, Annotation[] annotations, String value, Class actualClass, Type genericType) {
-        return value != null && !value.trim().isEmpty() ? LocalTime.parse(value) : null;
+        return value != null && !value.isBlank() ? LocalTime.parse(value) : null;
     }
 }
